First version of API. Added esbuild for bundle
