# src/controllers/interfaces/todoController.interface.ts
@@ -2,7 +2,8 @@ import { TodosResponse } from '../../utils/ResponsesTypes';
 
 export interface ITodoController {
   getTodos(id?: string): Promise<TodosResponse>;
-  createNewTodo(name: string | undefined, priority: string | undefined): Promise<TodosResponse>;
+  getMyTodos(id: string): Promise<TodosResponse>;
+  createNewTodo(name: string | undefined, priority: string | undefined, userId: string): Promise<TodosResponse>;
   updateTodoById(id: string | undefined,
     name?: string,
     priority?: string,
