# src/routes/todo.routes.ts
@@ -11,10 +11,20 @@ todoRouter
   // To Get ToDos or one by ID
   .get('/', verifyToken, async (req: Request, res: Response) => {
     // Variables for controller
-    const id: any = req.query?.id;
+    const todoId: any = req.query?.id;
 
     const controller: TodoController = new TodoController();
-    const response: TodosResponse = await controller.getTodos(id);
+    const response: TodosResponse = await controller.getTodos(todoId);
+    return res.status(response.status).send(response);
+  })
+
+  // To get logged user todos
+  .get('/me', verifyToken, async (req: Request, res: Response) => {
+    // Variables
+    const userId: string = res.locals.userId;
+
+    const controller: TodoController = new TodoController();
+    const response: TodosResponse = await controller.getMyTodos(userId);
     return res.status(response.status).send(response);
   })
 
@@ -23,32 +33,33 @@ todoRouter
     // Variables for controller
     const name: string | undefined = req.body?.name;
     const priority: string | undefined = req.body?.priority;
+    const userId: string = res.locals.userId;
 
     const controller: TodoController = new TodoController();
-    const response: TodosResponse = await controller.createNewTodo(name, priority);
+    const response: TodosResponse = await controller.createNewTodo(name, priority, userId);
     return res.status(response.status).send(response);
   })
 
   // To update a ToDo by ID
   .put('/', verifyToken, async (req: Request, res: Response) => {
     // Variables for controller
-    const id: any = req.query?.id;
+    const todoId: any = req.query?.id;
     const name: string | undefined = req.body?.name;
     const priority: string | undefined = req.body?.priority;
     const completed: boolean | undefined = req.body?.completed;
 
     const controller: TodoController = new TodoController();
-    const response: TodosResponse = await controller.updateTodoById(id, name, priority, completed);
+    const response: TodosResponse = await controller.updateTodoById(todoId, name, priority, completed);
     return res.status(response.status).send(response);
   })
 
   // To delete a ToDo by ID
   .delete('/', verifyToken, async (req: Request, res: Response) => {
     // Variables for controller
-    const id: any = req.query?.id;
+    const todoId: any = req.query?.id;
 
     const controller: TodoController = new TodoController();
-    const response: TodosResponse = await controller.deleteTodoById(id);
+    const response: TodosResponse = await controller.deleteTodoById(todoId);
     return res.status(response.status).send(response);
   });
 
